# brand-guardian-ai

./: .gitignore  requirements.txt
complianceQAPipeline/: .dockerignore  Dockerfile  main.py  pyproject.toml
complianceQAPipeline/backend/scripts/: index_documents.py
complianceQAPipeline/backend/src/api/: server.py  telemetry.py
complianceQAPipeline/backend/src/graph/: nodes.py  state.py  workflow.py
complianceQAPipeline/backend/src/services/: video_indexer.py
frontend/: app.py
